infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      # tell the Deployment to manage pods which have a label of `app` with the value `client`
      app: client
  template:
    # the pods must have a label of `app` with the value `client`
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: whitenoise1213/blog-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP # this is the default so can be excluded
  ports:
    - name: client
      protocol: TCP
      port: 4002
      targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: client-nodeport-srv
spec:
  selector:
    app: client
  type: NodePort
  ports:
    - name: client
      protocol: TCP
      port: 4002
      targetPort: 4002
