infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      # tell the Deployment to manage pods which have a label of `app` with the value `query`
      app: query
  template:
    # the pods must have a label of `app` with the value `query`
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: whitenoise1213/blog-query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP # this is the default so can be excluded
  ports:
    - name: query
      protocol: TCP
      port: 4004
      targetPort: 4004
